# user-intent-kit

./: .gitignore  .npmignore  CHANGELOG.md  README.md  package.json
examples/: claudemb-daemon.sh  claudemb-launchd.plist  iak-integration.js  openclaw-plugin-setup.md
kotlin/: README.md  build.gradle.kts
kotlin/src/main/kotlin/com/thinkoff/userintent/: IntentClient.kt  WatchAdapter.kt
python/: pyproject.toml
python/user_intent_kit/: __init__.py  client.py
src/: client.js  index.js
src/adapters/: browser.js  desktop.js  iak.js  openclaw.js
src/plugins/openclaw/: index.js  openclaw.plugin.json  package.json
swift/: Package.swift  README.md
swift/Sources/UserIntentKit/: IntentClient.swift  WatchAdapter.swift
test/: client.test.js
