[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "user-intent-kit"
version = "0.1.0"
description = "Cross-device user intent state for AI agents"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/ThinkOffApp/user-intent-kit"
